@@ -23,23 +23,26 @@
 # Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #
 
-import revelation, base
-import gtk, time
+import base
+from revelation import config, data, entry
+
+import time
+
+
+IMAGEPATH	= "http://oss.codepoet.no/revelation/img/fileicons"
 
 
 class XHTML(base.DataHandler):
 	"Data handler for XHTML export"
 
 	name		= "XHTML / CSS"
-	importer	= gtk.FALSE
-	exporter	= gtk.TRUE
-	encryption	= gtk.FALSE
+	importer	= False
+	exporter	= True
+	encryption	= False
 
 
 	def __init__(self):
 		base.DataHandler.__init__(self)
-
-		self.imagepath = "http://oss.codepoet.no/revelation/img/fileicons"
 
 
 	def __generate_css(self):
@@ -305,15 +308,15 @@ class XHTML(base.DataHandler):
 		"Generates xhtml for an entry"
 
 		tabs = "\t" * (depth + 2)
-		entry = entrystore.get_entry(iter)
+		e = entrystore.get_entry(iter)
 
-		if entry is not None:
-			entry.path = self.__get_entryid(entrystore, iter)
+		if e is not None:
+			e.path = self.__get_entryid(entrystore, iter)
 
 
 		xhtml = ""
 
-		if entry is None:
+		if e is None:
 
 			xhtml += "<div id=\"content\">\n"
 			xhtml += "	<ul id=\"entrylist\">\n"
@@ -326,13 +329,13 @@ class XHTML(base.DataHandler):
 			xhtml += "</div>\n"
 
 
-		elif type(entry) == revelation.entry.FolderEntry:
-			xhtml += tabs + "<li class=\"folder\" id=\"" + entry.path + "\">\n"
+		elif type(e) == entry.FolderEntry:
+			xhtml += tabs + "<li class=\"folder\" id=\"%s\">\n" % e.path
 			xhtml += tabs + "	<div class=\"folder-data\">\n"
-			xhtml += tabs + "		<h2>" + entry.name + "</h2>\n"
+			xhtml += tabs + "		<h2>%s</h2>\n" % e.name
 
-			if entry.description != "":
-				xhtml += tabs + "		<p class=\"description\">" + entry.description + "</p>\n"
+			if e.description != "":
+				xhtml += tabs + "		<p class=\"description\">%s</p>\n" % e.description
 
 			xhtml += tabs + "	</div>\n"
 			xhtml += tabs + "\n"
@@ -349,18 +352,18 @@ class XHTML(base.DataHandler):
 
 		else:
 
-			xhtml += tabs + "<li class=\"account\" id=\"" + entry.path + "\">\n"
+			xhtml += tabs + "<li class=\"account\" id=\"%s\">\n" % e.path
 			xhtml += tabs + "	<div class=\"heading\">\n"
-			xhtml += tabs + "		<img src=\"" + self.imagepath + "/entry/" + entry.id + ".png\" alt=\"" + entry.typename + "\" />\n"
-			xhtml += tabs + "		<h2>" + entry.name + "</h2>\n"
-			xhtml += tabs + "		<p class=\"description\"><span class=\"type\">" + entry.typename + (entry.description != "" and "; " or "") + "</span>" + entry.description + "</p>\n"
+			xhtml += tabs + "		<img src=\"%s/entry/%s.png\" alt=\"%s\" />\n" % ( IMAGEPATH, e.id, e.typename )
+			xhtml += tabs + "		<h2>%s</h2>\n" % e.name
+			xhtml += tabs + "		<p class=\"description\"><span class=\"type\">%s</span>%s</p>\n" % ( e.typename + (e.description != "" and "; " or ""), e.description )
 			xhtml += tabs + "	</div>\n"
 			xhtml += tabs + "\n"
 
 			xhtml += tabs + "	<div class=\"data\">\n"
 
 			fields = []
-			for field in entry.fields:
+			for field in e.fields:
 				if field.value != "":
 					fields.append(field)
 
@@ -375,7 +378,7 @@ class XHTML(base.DataHandler):
 
 				xhtml += tabs + "		</table>\n"
 
-			xhtml += tabs + "		<p class=\"updated\">Updated " + time.strftime("%Y-%m-%d %H:%M:%S", time.localtime(entry.updated)) + "</p>\n"
+			xhtml += tabs + "		<p class=\"updated\">Updated " + time.strftime("%Y-%m-%d %H:%M:%S", time.localtime(e.updated)) + "</p>\n"
 			xhtml += tabs + "	</div>\n"
 			xhtml += tabs + "</li>\n"
 			xhtml += tabs + "\n"
@@ -388,7 +391,7 @@ class XHTML(base.DataHandler):
 
 		xhtml = ""
 		xhtml += "<div id=\"footer\">\n"
-		xhtml += "	Generated by <a href=\"" + revelation.URL + "\">" + revelation.APPNAME + " " + revelation.VERSION + "</a>"
+		xhtml += "	Generated by <a href=\"%s\">%s %s</a>" % ( config.URL, config.APPNAME, config.VERSION )
 		xhtml += "</div>\n"
 		xhtml += "</body>\n"
 		xhtml += "</html>\n"
@@ -436,39 +439,39 @@ class XHTML(base.DataHandler):
 
 		# find the entries
 		entries = {}
-		iter = entrystore.iter_traverse_next(None)
+		iter = entrystore.iter_nth_child(None, 0)
 
 		while iter is not None:
-			entry = entrystore.get_entry(iter)
-			entry.path = self.__get_entryid(entrystore, iter)
+			e = entrystore.get_entry(iter)
+			e.path = self.__get_entryid(entrystore, iter)
 
-			if type(entry) != revelation.entry.FolderEntry:
-				if not entries.has_key(type(entry)):
-					entries[type(entry)] = []
+			if type(e) != entry.FolderEntry:
+				if not entries.has_key(type(e)):
+					entries[type(e)] = []
 
-				entries[type(entry)].append(entry)
+				entries[type(e)].append(e)
 
 			iter = entrystore.iter_traverse_next(iter)
 
 
 		# generate the xhtml
 		xhtml = ""
-		xhtml += "	<h2><img src=\"" + self.imagepath + "/sidebar/accountlist.png\" class=\"icon\" alt=\"Account list\" />Account list</h2>\n"
+		xhtml += "	<h2><img src=\"%s/sidebar/accountlist.png\" class=\"icon\" alt=\"Account list\" />Account list</h2>\n" % IMAGEPATH
 		xhtml += "\n"
 
-		for entrytype in revelation.entry.ENTRYLIST:
+		for entrytype in entry.ENTRYLIST:
 			if not entries.has_key(entrytype):
 				continue
 
-			xhtml += "	<h3>" + entrytype.typename + ":</h3>\n"
+			xhtml += "	<h3>%s:</h3>\n" % entrytype.typename
 			xhtml += "\n"
 			xhtml += "	<ul class=\"accountlist\">\n"
 
 			entrylist = entries[entrytype]
 			entrylist.sort(lambda x,y: cmp(x.name.lower(), y.name.lower()))
 
-			for entry in entrylist:
-				xhtml += "		<li><a href=\"#" + str(entry.path) + "\">" + entry.name + "</a></li>\n"
+			for e in entrylist:
+				xhtml += "		<li><a href=\"#%s\">%s</a></li>\n" % ( str(e.path), e.name )
 
 			xhtml += "	</ul>\n"
 			xhtml += "\n"
@@ -480,13 +483,13 @@ class XHTML(base.DataHandler):
 		"Generates file info for the sidebar"
 
 		xhtml = ""
-		xhtml += "	<h2 style=\"margin-top: 0px;\"><img src=\"" + self.imagepath + "/sidebar/file.png\" class=\"icon\" alt=\"File info\" />File info</h2>\n"
+		xhtml += "	<h2 style=\"margin-top: 0px;\"><img src=\"%s/sidebar/file.png\" class=\"icon\" alt=\"File info\" />File info</h2>\n" % IMAGEPATH
 		xhtml += "\n"
 		xhtml += "	<h3>Created:</h3>\n"
-		xhtml += "	<p>" + time.strftime("%Y-%m-%d %H:%M:%S", time.localtime()) + "</p>\n"
+		xhtml += "	<p>%s</p>\n" % time.strftime("%Y-%m-%d %H:%M:%S", time.localtime())
 		xhtml += "\n"
 		xhtml += "	<h3>Revelation version:</h3>\n"
-		xhtml += "	<p>" + revelation.VERSION + "</p>\n"
+		xhtml += "	<p>%s</p>\n" % config.VERSION
 		xhtml += "\n"
 
 		return xhtml
@@ -499,36 +502,36 @@ class XHTML(base.DataHandler):
 		xhtml = ""
 
 		if parent is None:
-			xhtml += "	<h2><img src=\"" + self.imagepath + "/sidebar/foldertree.png\" class=\"icon\" alt=\"Folder tree\" />Folder tree</h2>\n"
+			xhtml += "	<h2><img src=\"%s/sidebar/foldertree.png\" class=\"icon\" alt=\"Folder tree\" />Folder tree</h2>\n" % IMAGEPATH
 			xhtml += "\n"
 
 		# fetch folder list
 		folders = []
 		for i in range(entrystore.iter_n_children(parent)):
 			iter = entrystore.iter_nth_child(parent, i)
-			entry = entrystore.get_entry(iter)
-			entry.path = self.__get_entryid(entrystore, iter)
-			entry.iter = iter
+			e = entrystore.get_entry(iter)
+			e.path = self.__get_entryid(entrystore, iter)
+			e.iter = iter
 
-			if type(entry) == revelation.entry.FolderEntry:
-				folders.append(entry)
+			if type(e) == entry.FolderEntry:
+				folders.append(e)
 
 
 		# generate xhtml
 		if len(folders) > 0:
 			xhtml += tabs + "<ul>\n"
 
-			for entry in folders:
-				childxhtml = self.__generate_sidebar_foldertree(entrystore, entry.iter, depth + 1)
+			for e in folders:
+				childxhtml = self.__generate_sidebar_foldertree(entrystore, e.iter, depth + 1)
 
 				if childxhtml != "":
 					xhtml += tabs + "	<li>\n"
-					xhtml += tabs + "		<a href=\"#" + entry.path + "\">" + entry.name + "</a>\n"
+					xhtml += tabs + "		<a href=\"#%s\">%s</a>\n" % ( str(e.path), e.name )
 					xhtml += childxhtml
 					xhtml += tabs + "	</li>\n"
 
 				else:
-					xhtml += tabs + "	<li><a href=\"#" + entry.path + "\">" + entry.name + "</a></li>\n"
+					xhtml += tabs + "	<li><a href=\"#%s\">%s</a></li>\n" % ( str(e.path), e.name )
 
 			xhtml += tabs + "</ul>\n"
 
@@ -540,8 +543,10 @@ class XHTML(base.DataHandler):
 		"Returns an entry id for an iter"
 
 		path = "entry-"
+
 		for i in entrystore.get_path(iter):
 			path += str(i) + "-"
+
 		path = path[:-1]
 
 		return path
